syntax = "proto3";

package models;
option go_package="code.cloudfoundry.org/bbs/models";

message ProtoCertificateProperties {
  repeated string organizational_unit = 1;
}

