
syntax = "proto3";

package models;
option go_package="code.cloudfoundry.org/bbs/models";


message ProtoCheckDefinition {
  repeated ProtoCheck checks = 1;
  string log_source = 2 [json_name = "log_source"];
  repeated ProtoCheck readiness_checks = 3;
}

message ProtoCheck {
  // oneof is hard to use right now, instead we can do this check in validation
  // oneof check {
    ProtoTCPCheck tcp_check = 1;
    ProtoHTTPCheck http_check = 2;
  // }
}

message ProtoTCPCheck {
  uint32 port = 1 [json_name = "port"];
  uint64 connect_timeout_ms = 2;
  uint64 interval_ms = 3;
}

message ProtoHTTPCheck {
  uint32 port = 1 [json_name = "port"];
  uint64 request_timeout_ms = 2;
  string path = 3 [json_name = "path"];
  uint64 interval_ms = 4;
}
