syntax = "proto3";

package models;
option go_package="code.cloudfoundry.org/bbs/models";

import "actions.proto";
import "bbs.proto";
import "cached_dependency.proto";
import "certificate_properties.proto";
import "environment_variables.proto";
import "modification_tag.proto";
import "network.proto";
import "security_group.proto";
import "volume_mount.proto";
import "check_definition.proto";
import "image_layer.proto";
import "metric_tags.proto";
import "sidecar.proto";
import "log_rate_limit.proto";

message ProtoDesiredLRPSchedulingInfo {
  ProtoDesiredLRPKey desired_lrp_key = 1 [(bbs.bbs_by_value) = true, json_name = "desired_lrp_key", (bbs.bbs_json_always_emit) = true];

  string annotation = 2 [json_name = "annotation", (bbs.bbs_json_always_emit) = true];
  int32 instances = 3 [json_name = "instances", (bbs.bbs_json_always_emit) = true];

  ProtoDesiredLRPResource desired_lrp_resource = 4 [(bbs.bbs_by_value) = true, json_name = "desired_lrp_resource", (bbs.bbs_json_always_emit) = true];

  ProtoRoutes routes = 5 [(bbs.bbs_by_value) = false];
  ProtoModificationTag modification_tag = 6 [(bbs.bbs_by_value) = true, json_name = "modification_tag", (bbs.bbs_json_always_emit) = true];
  ProtoVolumePlacement volume_placement = 7 [json_name = "volume_placement"];
  repeated string PlacementTags = 8 [json_name ="placement_tags"];
}

message ProtoDesiredLRPRunInfo {
  ProtoDesiredLRPKey desired_lrp_key = 1 [(bbs.bbs_by_value) = true, json_name = "desired_lrp_key", (bbs.bbs_json_always_emit) = true];

  repeated ProtoEnvironmentVariable environment_variables = 2 [json_name = "env", (bbs.bbs_by_value) = false, (bbs.bbs_json_always_emit) = true];
  ProtoAction setup = 3;
  ProtoAction action = 4;
  ProtoAction monitor = 5;

  uint32 deprecated_start_timeout_s = 6 [json_name = "start_timeout", deprecated=true];

  bool privileged = 7 [json_name = "privileged", (bbs.bbs_json_always_emit) = true];

  uint32 cpu_weight = 8 [json_name = "cpu_weight", (bbs.bbs_json_always_emit) = true];
  repeated uint32 ports = 9 [packed = false];
  repeated ProtoSecurityGroupRule egress_rules = 10 [(bbs.bbs_by_value) = false, json_name = "egress_rules"];
  string log_source = 11 [json_name = "log_source", (bbs.bbs_json_always_emit) = true];
  string metrics_guid = 12 [deprecated=true, json_name = "metrics_guid", (bbs.bbs_json_always_emit) = true];
  int64 created_at = 13 [json_name = "created_at", (bbs.bbs_json_always_emit) = true];
  repeated ProtoCachedDependency cached_dependencies = 14;
  string legacy_download_user = 15 [deprecated=true, json_name = "legacy_download_user"];
  string trusted_system_certificates_path = 16 [json_name = "trusted_system_certificates_path"];
  repeated ProtoVolumeMount volume_mounts = 17 [json_name = "volume_mounts"];
  ProtoNetwork network = 18;

  int64 start_timeout_ms = 19 [json_name = "start_timeout_ms", (bbs.bbs_json_always_emit) = true];

  optional ProtoCertificateProperties certificate_properties = 20 [json_name = "certificate_properties"];

  string image_username = 21 [json_name = "image_username"];
  string image_password = 22 [json_name = "image_password"];

  ProtoCheckDefinition check_definition = 23 [json_name = "check_definition"];

  repeated ProtoImageLayer image_layers = 24 [json_name = "image_layers"];

  map<string, ProtoMetricTagValue> metric_tags = 25 [deprecated=true, json_name = "metric_tags"];

  repeated ProtoSidecar sidecars = 26;
  ProtoLogRateLimit log_rate_limit = 27 [json_name = "log_rate_limit"];
}

// helper message for marshalling routes
message ProtoRoutes {
  map<string, bytes> routes = 1;
}

message ProtoDesiredLRPUpdate {
  optional int32 instances = 1;
  optional ProtoRoutes routes = 2 [(bbs.bbs_by_value) = false];
  optional string annotation = 3;
  map<string, ProtoMetricTagValue> metric_tags = 4 [json_name = "metric_tags"];
}

message ProtoDesiredLRPKey {
  string process_guid = 1 [json_name = "process_guid", (bbs.bbs_json_always_emit) = true];
  string domain = 2 [json_name = "domain", (bbs.bbs_json_always_emit) = true];
  string log_guid = 3 [json_name = "log_guid", (bbs.bbs_json_always_emit) = true];
}

message ProtoDesiredLRPResource {
  int32 memory_mb = 1 [json_name = "memory_mb", (bbs.bbs_json_always_emit) = true];
  int32 disk_mb = 2 [json_name = "disk_mb", (bbs.bbs_json_always_emit) = true];
  string root_fs = 3 [json_name = "rootfs", (bbs.bbs_json_always_emit) = true];
  int32 max_pids = 4 [json_name = "max_pids", (bbs.bbs_json_always_emit) = true];
}

message ProtoDesiredLRP {
  string process_guid = 1 [json_name = "process_guid", (bbs.bbs_json_always_emit) = true];
  string domain = 2 [json_name = "domain", (bbs.bbs_json_always_emit) = true];
  string root_fs = 3 [json_name = "rootfs", (bbs.bbs_json_always_emit) = true];
  int32 instances = 4 [json_name = "instances", (bbs.bbs_json_always_emit) = true];
  repeated ProtoEnvironmentVariable environment_variables = 5 [json_name = "env", (bbs.bbs_json_always_emit) = true];
  ProtoAction setup = 6;
  ProtoAction action = 7;

  int64 start_timeout_ms = 27 [json_name = "start_timeout_ms", (bbs.bbs_json_always_emit) = true];
  uint32 deprecated_start_timeout_s = 8 [json_name = "deprecated_timeout_ns", deprecated=true];

  ProtoAction monitor = 9;
  int32 disk_mb = 10 [json_name = "disk_mb", (bbs.bbs_json_always_emit) = true];
  int32 memory_mb = 11 [json_name = "memory_mb", (bbs.bbs_json_always_emit) = true];
  uint32 cpu_weight = 12 [json_name = "cpu_weight", (bbs.bbs_json_always_emit) = true];
  bool privileged = 13 [json_name = "privileged", (bbs.bbs_json_always_emit) = true];
  repeated uint32 ports = 14 [packed = false];
  optional ProtoRoutes routes = 15 [(bbs.bbs_by_value) = false];
  string log_source = 16 [json_name = "log_source", (bbs.bbs_json_always_emit) = true];
  string log_guid = 17 [json_name = "log_guid", (bbs.bbs_json_always_emit) = true];
  string metrics_guid = 18 [deprecated=true, json_name = "metrics_guid", (bbs.bbs_json_always_emit) = true];
  string annotation = 19 [json_name = "annotation", (bbs.bbs_json_always_emit) = true];
  repeated ProtoSecurityGroupRule egress_rules = 20 [json_name = "egress_rules"];
  ProtoModificationTag modification_tag = 21 [json_name = "modification_tag"];
  repeated ProtoCachedDependency cached_dependencies = 22 [json_name = "cached_dependencies"];
  string legacy_download_user = 23 [deprecated=true, json_name = "legacy_download_user"];
  string trusted_system_certificates_path = 24 [json_name = "trusted_system_certificates_path"];
  repeated ProtoVolumeMount volume_mounts = 25 [json_name = "volume_mounts"];
  ProtoNetwork network = 26;
  repeated string PlacementTags = 28 [json_name ="placement_tags"];
  int32 max_pids = 29 [json_name = "max_pids", (bbs.bbs_json_always_emit) = true];

  optional ProtoCertificateProperties certificate_properties = 30 [json_name = "certificate_properties"];

  string image_username = 31 [json_name = "image_username"];
  string image_password = 32 [json_name = "image_password"];

  ProtoCheckDefinition check_definition = 33 [json_name = "check_definition"];

  repeated ProtoImageLayer image_layers = 34 [json_name = "image_layers"];

  map<string, ProtoMetricTagValue> metric_tags = 35 [json_name = "metric_tags"];

  repeated ProtoSidecar sidecars = 36;
  ProtoLogRateLimit log_rate_limit = 37 [json_name = "log_rate_limit"];
}
